deployment/app-server/app-server.yml
Metadata:
  Generator: "former2"
Description: ""
Parameters:
  LoadBalancerCertArn:
    Type: String
  WildrSecretsManagerPathPrefix:
    Type: String
  SGSearch:
    Type: String
  SGElastiCache:
    Type: String
  SGBIDB:
    Type: String
  SGDB:
    Type: String
  SGTailscale:
    Type: String
  WildrIntCloudMapNamespace:
    Type: String
  EC2VPC:
    Type: String
  ECSClusterArn:
    Type: String
  ImageTag:
    Type: String
  WildrEnv:
    Type: String
    Default: "dev"
  WildrEnvName:
    Type: String
    Default: "wildr-dev-2"
  PublicSubnetIds:
    Type: CommaDelimitedList
  PrivateSubnetIds:
    Type: CommaDelimitedList
  S3UploadBucketPublicArn:
    Type: String
  S3UploadBucketPrivateArn:
    Type: String

Resources:

  SGLoadBalancer:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Load Balancer Security Group for vpc-dev-1"
      GroupName: !Sub "secgrp-${WildrEnvName}-app-server-lb"
      VpcId: !Ref EC2VPC
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0"
          FromPort: 80
          IpProtocol: "tcp"
          ToPort: 80
        - CidrIp: "0.0.0.0/0"
          FromPort: 443
          IpProtocol: "tcp"
          ToPort: 443

  SGLoadBalancerEgress1:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref SGLoadBalancer
      DestinationSecurityGroupId: !Ref SGAppServer
      FromPort: 8080
      IpProtocol: "tcp"
      ToPort: 8080

  Route53RecordSet:
    Type: "AWS::Route53::RecordSet"
    Properties:
      Name: !Sub "${WildrEnvName}-new.api.${WildrEnv}.wildr.com."
      Type: "A"
      HostedZoneName: "wildr.com."
      AliasTarget:
        HostedZoneId: !GetAtt ELBAppServer.CanonicalHostedZoneID
        DNSName: !GetAtt ELBAppServer.DNSName
        EvaluateTargetHealth: false

  ELBAppServer:
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      Name: !Sub "lb-${WildrEnvName}-app-server"
      Scheme: "internet-facing"
      Type: "application"
      Subnets: !Ref PublicSubnetIds
      SecurityGroups:
        - !Ref SGLoadBalancer
      IpAddressType: "ipv4"
      LoadBalancerAttributes:
        - Key: "access_logs.s3.enabled"
          Value: "false"
        - Key: "idle_timeout.timeout_seconds"
          Value: "60"
        - Key: "deletion_protection.enabled"
          Value: "false"
        - Key: "routing.http2.enabled"
          Value: "true"
        - Key: "routing.http.drop_invalid_header_fields.enabled"
          Value: "false"
        - Key: "routing.http.xff_client_port.enabled"
          Value: "false"
        - Key: "routing.http.desync_mitigation_mode"
          Value: "defensive"
        - Key: "waf.fail_open.enabled"
          Value: "false"
        - Key: "routing.http.x_amzn_tls_version_and_cipher_suite.enabled"
          Value: "false"

  TargetGroupAppServer:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: ELBAppServer
    Properties:
      TargetType: ip
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: '/health'
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 15
      HealthyThresholdCount: 3
      Port: 8080
      Protocol: HTTP
      UnhealthyThresholdCount: 10
      VpcId: !Ref EC2VPC
      TargetGroupAttributes:
      - Key: deregistration_delay.timeout_seconds
        Value: '30'

  ELBListenerAppServer:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      LoadBalancerArn: !Ref ELBAppServer
      Port: 443
      Protocol: "HTTPS"
      SslPolicy: "ELBSecurityPolicy-2016-08"
      Certificates:
        - CertificateArn: !Ref LoadBalancerCertArn
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroupAppServer

  ELBListenerRedirect80:
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      LoadBalancerArn: !Ref ELBAppServer
      Port: 80
      Protocol: "HTTP"
      DefaultActions:
        - Order: 1
          RedirectConfig:
            Protocol: "HTTPS"
            Port: "443"
            Host: "#{host}"
            Path: "/#{path}"
            Query: "#{query}"
            StatusCode: "HTTP_301"
          Type: "redirect"

  ELBListnerRuleAppServer:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    DependsOn: [ELBListenerAppServer, ELBListenerRedirect80]
    Properties:
      Actions:
      - Type: forward
        TargetGroupArn: !Ref TargetGroupAppServer
      Conditions:
      - Field: path-pattern
        Values: [/]
      ListenerArn: !Ref ELBListenerAppServer
      Priority: 1

  SGAppServer:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Security Group for troll server"
      GroupName: !Sub "secgrp-${WildrEnvName}-app-server"
      VpcId: !Ref EC2VPC
      SecurityGroupEgress:
        - CidrIp: "0.0.0.0/0"
          FromPort: 0
          IpProtocol: "tcp"
          ToPort: 65535
        - CidrIp: "0.0.0.0/0"
          FromPort: 123
          IpProtocol: "udp"
          ToPort: 123
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "-1"

  SGAppServerIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SGAppServer
      SourceSecurityGroupId: !Ref SGLoadBalancer
      FromPort: 8080
      IpProtocol: "tcp"
      ToPort: 8080
  SGAppServerIngress2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SGAppServer
      SourceSecurityGroupId: !Ref SGTailscale
      FromPort: 22
      IpProtocol: "tcp"
      ToPort: 22

  SGDBIngressAppServer:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SGDB
      SourceSecurityGroupId: !Ref SGAppServer
      FromPort: 5432
      IpProtocol: "tcp"
      ToPort: 5432

  SGElastiCacheIngressAppServer:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SGElastiCache
      SourceSecurityGroupId: !Ref SGAppServer
      FromPort: 6379
      IpProtocol: "tcp"
      ToPort: 6379

  SGSearchIngressAppServer:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SGSearch
      SourceSecurityGroupId: !Ref SGAppServer
      FromPort: 443
      IpProtocol: "tcp"
      ToPort: 443

  SGAppServerIngressLoadBalancer:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SGAppServer
      SourceSecurityGroupId: !Ref SGLoadBalancer
      FromPort: 8080
      IpProtocol: "tcp"
      ToPort: 8080

  IAMManagedPolicyUploads:
    Type: "AWS::IAM::ManagedPolicy"
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action:
              - "s3:*"
            Effect: "Allow"
            Resource:
              - !Ref S3UploadBucketPublicArn
              - !Ref S3UploadBucketPrivateArn
              - !Join
                - ''
                - - !Ref S3UploadBucketPublicArn
                  - '/*'
              - !Join
                - ''
                - - !Ref S3UploadBucketPrivateArn
                  - '/*'

  IAMAppServerECSTaskRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Action: "sts:AssumeRole"
            Principal:
              Service: "ecs-tasks.amazonaws.com"
      Path: "/"
      RoleName: !Sub "${WildrEnvName}-app-server-task-role"
      ManagedPolicyArns:
        - "arn:aws:iam::793433463428:policy/PublishCloudWatchLogs"
        - !Ref IAMManagedPolicyUploads
        - "arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore"
        - "arn:aws:iam::793433463428:policy/ECSExecPolicy"
          # TODO figure out what we need
        - "arn:aws:iam::aws:policy/AWSElasticBeanstalkWorkerTier"
          # TODO figure out what we need
        - "arn:aws:iam::aws:policy/AWSElasticBeanstalkWebTier"

  IAMAppServerECSTaskExecutionRole:
    Type: "AWS::IAM::Role"
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Action: "sts:AssumeRole"
            Principal:
              Service: "ecs-tasks.amazonaws.com"
      Path: "/"
      RoleName: !Sub "${WildrEnvName}-app-server-execution-role"
      ManagedPolicyArns:
        - !Ref IAMManagedPolicyS3ConfigsBucket
        - !Ref IAMManagedPolicySecretsAccess
        - "arn:aws:iam::793433463428:policy/PublishCloudWatchLogs"
        - "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"

  AppServerService:
    Type: "AWS::ECS::Service"
    Properties:
      ServiceName: "app-server"
      Cluster: !Ref ECSClusterArn
      ServiceConnectConfiguration:
        Enabled: True
        LogConfiguration:
          LogDriver: "awslogs"
          Options:
            awslogs-group: !Ref AppServerLogsGroup
            awslogs-region: !Ref AWS::Region
            awslogs-stream-prefix: "service-connect"
        Namespace: !Ref WildrIntCloudMapNamespace
        Services:
          - ClientAliases:
              - DnsName: app-server 
                Port: 8080
            DiscoveryName: app-server
            PortName: app-server-http
      DesiredCount: 1
      EnableExecuteCommand: true
      LaunchType: "FARGATE"
      PlatformVersion: "LATEST"
      TaskDefinition: !Ref AppServerTaskDef
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 100
        DeploymentCircuitBreaker:
          Enable: false
          Rollback: false
      NetworkConfiguration:
        AwsvpcConfiguration:
          SecurityGroups:
            - !Ref SGAppServer
          Subnets: !Ref PrivateSubnetIds
      SchedulingStrategy: "REPLICA"
      LoadBalancers:
      - ContainerName: 'app-server'
        ContainerPort: 8080
        TargetGroupArn: !Ref TargetGroupAppServer

  AppServerLogsGroup:
    Type: "AWS::Logs::LogGroup"
    Properties:
      LogGroupName: !Sub "/${WildrEnvName}/app-server"
      RetentionInDays: 7

  IAMManagedPolicySecretsAccess:
    Type: "AWS::IAM::ManagedPolicy"
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action:
              - "secretsmanager:GetResourcePolicy"
              - "secretsmanager:GetSecretValue"
              - "secretsmanager:DescribeSecret"
              - "secretsmanager:ListSecretVersionIds"
            Effect: "Allow"
            Resource:
              - !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${WildrSecretsManagerPathPrefix}/secrets-95oWXN"

  IAMManagedPolicyS3ConfigsBucket:
    Type: "AWS::IAM::ManagedPolicy"
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action:
              - "s3:*"
            Effect: "Allow"
            Resource:
              - !Sub "arn:aws:s3:::configs.${WildrEnvName}.${WildrEnv}.int.wildr.com/app-server"
              - !Sub "arn:aws:s3:::configs.${WildrEnvName}.${WildrEnv}.int.wildr.com/app-server/*"
              
  AppServerTaskDef:
    Type: "AWS::ECS::TaskDefinition"
    Properties:
      ContainerDefinitions:
        - Name: "app-server"
          Command: ["./docker-server-entrypoint.sh"]
          EnvironmentFiles:
            - Type: s3
              Value: !Sub "arn:aws:s3:::configs.${WildrEnvName}.${WildrEnv}.int.wildr.com/app-server/${ImageTag}/app-server.${WildrEnv}.env"
          Secrets:
            - Name: "ES_PASSWORD"
              ValueFrom: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${WildrSecretsManagerPathPrefix}/secrets-95oWXN:ES_PASSWORD::"
            - Name: "DB_PASSWORD"
              ValueFrom: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${WildrSecretsManagerPathPrefix}/secrets-95oWXN:RDS_PASSWORD::"
            - Name: "BI_DB_PASSWORD"
              ValueFrom: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${WildrSecretsManagerPathPrefix}/secrets-95oWXN:BI_DB_PASSWORD::"
            - Name: "JWT_SECRET"
              ValueFrom: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${WildrSecretsManagerPathPrefix}/secrets-95oWXN:JWT_SECRET::"
          Essential: true
          Image: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/wildr-server:${ImageTag}"
          LogConfiguration:
            LogDriver: "awslogs"
            Options:
              awslogs-group: !Ref AppServerLogsGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: "task"
          PortMappings:
            - ContainerPort: 8080
              Protocol: "tcp"
              Name: app-server-http
      Family: "app-server"
      TaskRoleArn: !GetAtt IAMAppServerECSTaskRole.Arn
      ExecutionRoleArn: !GetAtt IAMAppServerECSTaskExecutionRole.Arn
      NetworkMode: "awsvpc"
      RequiresCompatibilities:
        - "FARGATE"
      Cpu: "0.5 vCPU"
      Memory: "1024"
